--- a/index.html
+++ b/index.html
@@ -54,7 +54,24 @@
       padding: 5px;
       margin: 0 auto;
     }
+    .continueExp:hover{
+      color: white;
+    }
 
+    .continueExp {
+      color: rgb(200,200,200);
+      text-decoration: none;
+    }
+
+    .continueButton {
+      width: 100px;
+      text-align: center;
+      border: 4px outset gray;
+      background: gray;
+      padding: 5px;
+      margin: 0 auto;
+    }
+    
     #meter{
     width: 10cm;
     height: 10cm;
