--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       padding: 5px;
       margin: 0 auto;
     }
-    
+
     #meter{
     width: 10cm;
     height: 10cm;
@@ -560,6 +560,7 @@ Saving data...
             // drawObjects(ctx1,objects);
 
             // Begin
+            $('#frame5').hide();
             showTrial();
             startTrialTime = new Date();
             // $('.trialDiv').hide();
